@@ -1,0 +1,7 @@
+<vector android:height="108dp"
+        android:viewportHeight="24"
+    android:viewportWidth="24"
+        android:width="108dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#ffffff" android:fillType="nonZero"
+            android:pathData="M18.4433,7.9673L15.2217,7.9673L15.2217,6.3542L13.6108,4.7411L10.3891,4.7411L8.7783,6.3542L8.7783,7.9673L5.5566,7.9673C4.6707,7.9673 3.9458,8.6932 3.9458,9.5804L3.9458,13.6131C3.9458,14.218 4.268,14.7261 4.7512,15.0084L4.7512,17.6458C4.7512,18.5411 5.468,19.2589 6.3621,19.2589L17.6379,19.2589C18.5319,19.2589 19.2488,18.5411 19.2488,17.6458L19.2488,15.0003C19.724,14.7181 20.0542,14.2019 20.0542,13.6131L20.0542,9.5804C20.0542,8.6932 19.3293,7.9673 18.4433,7.9673ZM10.3891,6.3542L13.6108,6.3542L13.6108,7.9673L10.3891,7.9673L10.3891,6.3542ZM5.5566,9.5804L18.4433,9.5804L18.4433,13.6131L14.4162,13.6131L14.4162,11.1935L9.5837,11.1935L9.5837,13.6131L5.5566,13.6131L5.5566,9.5804ZM12.8054,14.4196L11.1946,14.4196L11.1946,12.8065L12.8054,12.8065L12.8054,14.4196ZM17.6379,17.6458L6.3621,17.6458L6.3621,15.2262L9.5837,15.2262L9.5837,16.0327L14.4162,16.0327L14.4162,15.2262L17.6379,15.2262L17.6379,17.6458Z"/>
+</vector>
